# budgie-desktop

./: 0001-Use-swaybg-to-set-our-wallpaper.patch  0002-Move-and-rework-the-ShellShim-code-to-budgie-daemon.patch  meson.build
src/daemon/: endsession.ui  endsession.vala  main.vala  manager.vala  menus.vala  meson.build  shim.vala
src/dialogs/power/: window.vala
src/panel/applets/icon-tasklist/widgets/: IconButton.vala
src/session/: budgie-desktop.desktop.in.in  meson.build
src/wm/: meson.build
